feat: added wakatime stats

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+<p>My coding status provided by WakaTime</p>
+<figure><embed src="https://wakatime.com/share/@9c4e0f90-f192-421f-b602-2851476d895e/801773c4-2017-488f-aa9f-cd989511b356.svg"></embed></figure>
+
 <ul>
     {% for post in paginator.posts %}
       <li>
